--- a/styles/base.css
+++ b/styles/base.css
@@ -121,6 +121,7 @@ main {
 
 .cardText {
     flex: 1;
+    font-size: 18px;
 
 }
 
@@ -131,4 +132,32 @@ footer {
     background-color: #2c3e50;
     color: white;
     margin-top: 20px;
+}
+
+
+
+
+
+@media screen and (max-width: 600px) {
+    ul {
+        flex-direction: column;
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    nav a {
+        padding: 10px 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    .card {
+        flex-direction: column;
+    }
+
+    .cardImage {
+        width: 100%;
+        height: auto;
+    }
+    
 }
