--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -35,10 +35,12 @@ nav a:hover {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 20px;
-    padding: 10px;
-    width: 80%;
+    padding: 28px;
+    width: 100%;
     margin: 0 auto;
     vertical-align: top;
+    border-radius: 100px;
+    border-style: dotted;
 }
 
 .hamburger {
@@ -96,12 +98,5 @@ footer {
     margin-top: 20px;
 }
 
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 20px;
-    padding: 10px;
-    width: 90%;
-    margin: 0 auto;
-  }
+
   
