--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -99,4 +99,23 @@ footer {
 }
 
 
+@media screen and (max-width: 768px){
+    header{
+        width: auto;
+    }
+    .gallery{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: fit-content;
+    }
+    main{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width:768px ;
+    }
+
+}
+
   
