--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -33,10 +33,9 @@ nav a:hover {
 
 .gallery {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
     gap: 20px;
     padding: 28px;
-    width: 100%;
     margin: 0 auto;
     vertical-align: top;
     border-radius: 100px;
@@ -106,14 +105,13 @@ footer {
     .gallery{
         display: flex;
         flex-direction: column;
-        align-items: center;
         width: fit-content;
     }
     main{
         display: flex;
         flex-direction: column;
         align-items: center;
-        max-width:768px ;
+        max-width:250px ;
     }
 
 }
